<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/_90sdp"
    android:background="@drawable/curve_shap_dialog"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/are_you_sure_that_you_want_to_end_case"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2_yes"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/c1"
            android:clickable="true"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:focusable="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2_no"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@color/c1"
            android:clickable="true"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>