<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".receptionist.calls.CallsFragment"
    >

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/back_createcalls"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_5sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/c14"
        android:textSize="@dimen/_14ssp"
        android:text="@string/create_call"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linear1_createcall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/back_createcalls"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        >

        <EditText
            android:id="@+id/PatientName_CreateCall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_14ssp"
            android:hint="@string/patient_name"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:maxLines="1"
            android:background="@drawable/shape10"
            android:layout_margin="@dimen/_5sdp"
            android:textAlignment="viewStart"
            android:inputType="textCapSentences"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/age_CreateCall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_14ssp"
            android:hint="@string/age"
            android:inputType="number"
            android:paddingStart="@dimen/_10sdp"
            android:maxLines="1"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@drawable/shape10"
            android:layout_margin="@dimen/_5sdp"
            android:textAlignment="viewStart"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/PhoneNumber_CreateCall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_14ssp"
            android:hint="@string/phone_number"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingStart="@dimen/_10sdp"
            android:maxLines="1"
            android:maxLength="13"
            android:inputType="number"
            android:background="@drawable/shape10"
            android:layout_margin="@dimen/_5sdp"
            android:textAlignment="viewStart"
            android:textCursorDrawable="@null" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape10"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_margin="@dimen/_5sdp"
            >

            <EditText
                android:id="@+id/SelectDoctor_CreateCall"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/arrow_CreateCall"
                android:background="@null"
                android:enabled="true"
                android:focusable="false"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/select_doctor"
                android:inputType="textNoSuggestions"
                android:textAlignment="viewStart"
                android:textSize="@dimen/_14ssp" />
            <ImageView
                android:id="@+id/arrow_CreateCall"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_polygon_12"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                >
            </ImageView>

        </RelativeLayout>

        <EditText
            android:id="@+id/CaseDescription_CreateCall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_155sdp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_14ssp"
            android:hint="@string/case_description"
            android:gravity="top"
            android:paddingStart="@dimen/_10sdp"
            android:background="@drawable/shape10"
            android:layout_margin="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:inputType="textNoSuggestions"
            android:paddingEnd="@dimen/_5sdp"
            android:textCursorDrawable="@null" />



    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendcallbutton_createcall"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_38sdp"
        android:text="@string/send_call"
        android:fontFamily="@font/poppins_regular"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/shape4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_10sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>