<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/close_selectemployeemanager"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_5sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/c14"
        android:textSize="@dimen/_14ssp"
        android:text="@string/select_employee"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edittextsearch_selectemployeemanager"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@id/close_selectemployeemanager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/shape10"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:paddingStart="@dimen/_5sdp"
        android:hint="@string/search_for_employee"
        android:textCursorDrawable="@null" />
    <HorizontalScrollView
        android:id="@+id/scroll_selectemployeemanager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/edittextsearch_selectemployeemanager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/all_selectemployeemanager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:text="@string/all"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/shape4"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_10sdp" />

            <TextView
                android:id="@+id/doctor_selectemployeemanager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:text="@string/Doctor"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/shape10" />

            <TextView
                android:id="@+id/nurse_selectemployeemanager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:text="@string/Nurse"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/shape10"
                android:textColor="@color/black"
                android:layout_marginEnd="@dimen/_10sdp" />

            <TextView
                android:id="@+id/hr_selectemployeemanager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:text="@string/hr_employee"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/shape10"
                android:textColor="@color/black"
                android:layout_marginEnd="@dimen/_10sdp" />

            <TextView
                android:id="@+id/analysisEmployee_selectemployeemanager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:text="@string/AnalysisEmployee"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/shape10"
                android:textColor="@color/black"
                android:layout_marginEnd="@dimen/_10sdp" />
        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_selectemployeemanager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@+id/scroll_selectemployeemanager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/selectemployeebutton_selectemployeemanager"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selectemployeebutton_selectemployeemanager"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_38sdp"
        android:text="@string/select_employee"
        android:fontFamily="@font/poppins_regular"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/shape4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_10sdp" />



</androidx.constraintlayout.widget.ConstraintLayout>